# localization

./: CMakeLists.txt  README.md  package.xml
include/: parameterUse.h  utility.h
include/velodyne_points_publish/: Lidar32DataStruct.h  tempCodeRunnerFile  tempCodeRunnerFile.h  velodyne_points_parser.h
launch/: START  localizationInMap.launch  localizationInMap.sh  localizationInMap_TFListener.launch  run.launch  test.rviz
launch/KITTI/localization/: localizationInMap.rviz  localizationInMap_K.launch
launch/KITTI/mapping/: mapOptimization_K.launch  test.rviz
launch/XYZI/localization/: localizationInMap_XYZI.launch  localizationInMap_XYZI.rviz
launch/XYZI/mapping/: mapOptimization_XYZI.launch
launch/localization/: localizationInMap.launch
launch/mapping/: mapOptimization.launch
launch/master/localization/: localizationInMap.launch  localizationInMap.sh  localizationInMap_TFListener.launch  velodynePointsPublish.launch
parameters/: velodyne_points_publish_para.txt
src/: featureAssociation.cpp  imageProjection_localization.cpp  imageProjection_mapping.cpp  kitti_parser_localization.cpp  kitti_parser_node.cpp  localizationInMap.cpp  mapOptmization.cpp  publishPCD.cpp  velodyne_points_parser.cpp  velodyne_points_publish.cpp  velodyne_points_publish_localization.cpp
src/KITTI/localization/: featureAssociation_localization_K.cpp  imageProjection_localization_K.cpp  localizationInMap_localization_K.cpp  publishPCD_localization_K.cpp
src/KITTI/mapping/: featureAssociation_mapping_K.cpp  imageProjection_mapping_K.cpp  mapOptimization_mapping_K.cpp  transformFusion_mapping_K.cpp
src/XYZI/localization/: featureAssociation_localization_XYZI.cpp  imageProjection_localization_XYZI.cpp  localizationInMap_localization_XYZI.cpp
src/XYZI/mapping/: featureAssociation_mapping_XYZI.cpp  imageProjection_mapping_XYZI.cpp  mapOptimization_mapping_XYZI.cpp  transformFusion_mapping_XYZI.cpp
src/localization/: imageProjection_localization.cpp  localizationInMap_localization.cpp  publishPCD_localization.cpp  transformListener_localization.cpp
src/mapping/: imageProjection_mapping.cpp
src/master/localization/: featureAssociation_localization.cpp  publishPCD_localization.cpp
src/master/mapping/: imageProjection_mapping.cpp  mapOptimization_mapping.cpp
